// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when error message is NOT provided 1`] = `
<div
  className="App"
/>
`;

exports[`matches snapshot when error message is provided 1`] = `
<div
  className="App"
>
  <p />
</div>
`;
